2012-04-17  Nick Alcock  <nick.alcock@oracle.com>

	* libctf/ctf_create.c (ctf_add_member): Re-express in terms
	of...
	(ctf_add_member_offset): ... this new function, which can
	explicitly specify the offset of members.
	* libctf/ctf_lib.c (ctf_gzwrite): New, compressed writeout.

	* uts/common/sys/ctf_api.h: New functions.

2012-04-16  Nick Alcock  <nick.alcock@oracle.com>

	Silent-by-default build.

	* Makefunctions (describe-target): New, describe a target when silent
	(describe-install-target): Likewise, for installation.
	(cc-template): Use it.
	(build-lib-template): Likewise.
	(lib-template): Likewise.
	(shlib-template) Likewise.
	(cmd-template): Likewise.

	* Makeoptions (verbose): New option: silence make when turned off.
	(help): Document it.
	* README.build-system: Likewise.

	* GNUmakefile: Document custom targets.
	* Build (install): Document this target.
	* cmd/Build (install): Likewise.
	* uts/Build (install): Likewise. Split out list of installed files...
	(HEADERS_INSTALL): ... into this new variable.
	* libdtrace/Build: Document custom targets and install target.

2012-03-21  Nick Alcock  <nick.alcock@oracle.com>

	* GNUmakefile: Split out checking targets into...
	* Makecheck: ... this new makefile fragment. Comment it up.
	(check-module-loading): New target, load the modules which 'make
	check' would load, for load-but-no-run checking.
	(check-probe-all-syscalls, check-installed-probe-all-syscalls):
	Check a null probe of all syscalls with the build and installed
	dtrace.
	(check-probe-all-syscalls-internal): Internal target, doing the
	work of the above two.

2012-03-20  Nick Alcock  <nick.alcock@oracle.com>

	Changes for easier stress-testing.

	* GNUmakefile (check): Reformulate in terms of check-verbose.
	(check-installed): Reformulate in terms of check-installed-verbose.
	(check-verbose): Pass in RUNTESTFLAGS.
	(check-installed-verbose): Likewise.
	(check-*-stress): New targets for testing in parallel with stress